@@ -7,7 +7,8 @@ Unreleased:
   UI:
     *
   SDK:
-    *
+    * Changed DCHECK and DLOGs to be always disabled in SDK builds, regardless
+      of NDEBUG.
 
 
 v19.0 - 2021-09-02:
